c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/cast_double_to_pointer.c
/* It's illegal to cast a double to a pointer */

int main(void) {
    double d = 0.0;
    int *x = (int *) d;
    return 0;
}